Bug 470936 - Weather Report applet does not find any location
Summary: Weather Report applet does not find any location
Status: RESOLVED FIXED
Alias: None
Product: kdeplasma-addons
Classification: Unmaintained
Component: Weather (other bugs)
Version First Reported In: master
Platform: Neon Linux
: NOR grave
Target Milestone: ---
Assignee: Plasma Bugs List
URL:
Keywords: qt6
Depends on:
Blocks:
 
Reported: 2023-06-12 12:28 UTC by Patrick Silva
Modified: 2023-06-24 12:37 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 6
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Patrick Silva 2023-06-12 12:28:21 UTC
STEPS TO REPRODUCE
1. enable the Weather Report applet in the system tray settings
2. right-click on the Weather Report applet in the system tray and choose "Configure Weaher Report..."
3. type any city in "Enter new location" field

OBSERVED RESULT
The typed location is not found. A gear spins all the time instead.

EXPECTED RESULT
the typed location is found

SOFTWARE/OS VERSIONS
Operating System: KDE neon Unstable Edition
KDE Plasma Version: 5.27.80
KDE Frameworks Version: 5.240.0
Qt Version: 6.5.0
Graphics Platform: Wayland
Comment 1 Nicolas Fella 2023-06-13 22:18:02 UTC
kf.coreaddons: no metadata found in "plasma5support/dataengine/plasma_engine_ion_bbcukmet" "The shared library was not found."
kf.coreaddons: "Could not find plugin plasma5support/dataengine/plasma_engine_ion_bbcukmet"
kf.plasma5support.core: Can't find a dataengine named "ion_bbcukmet"
kde.dataengine.weather: Could not find ion to request source for: "ion_bbcukmet|validate|w"
kf.coreaddons: no metadata found in "plasma5support/dataengine/plasma_engine_ion_dwd" "The shared library was not found."
kf.coreaddons: "Could not find plugin plasma5support/dataengine/plasma_engine_ion_dwd"
kf.plasma5support.core: Can't find a dataengine named "ion_dwd"
kde.dataengine.weather: Could not find ion to request source for: "ion_dwd|validate|w"
kf.coreaddons: no metadata found in "plasma5support/dataengine/plasma_engine_ion_envcan" "The shared library was not found."
kf.coreaddons: "Could not find plugin plasma5support/dataengine/plasma_engine_ion_envcan"
kf.plasma5support.core: Can't find a dataengine named "ion_envcan"
kde.dataengine.weather: Could not find ion to request source for: "ion_envcan|validate|w"
kf.coreaddons: no metadata found in "plasma5support/dataengine/plasma_engine_ion_noaa" "The shared library was not found."
kf.coreaddons: "Could not find plugin plasma5support/dataengine/plasma_engine_ion_noaa"
kf.plasma5support.core: Can't find a dataengine named "ion_noaa"
kde.dataengine.weather: Could not find ion to request source for: "ion_noaa|validate|w"
kf.coreaddons: no metadata found in "plasma5support/dataengine/plasma_engine_ion_wettercom" "The shared library was not found."
kf.coreaddons: "Could not find plugin plasma5support/dataengine/plasma_engine_ion_wettercom"
kf.plasma5support.core: Can't find a dataengine named "ion_wettercom"


Looks like the dataengine handling needs to be adjusted
Comment 2 Bug Janitor Service 2023-06-24 12:07:39 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/kdeplasma-addons/-/merge_requests/420
Comment 3 Bug Janitor Service 2023-06-24 12:10:28 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/plasma-workspace/-/merge_requests/3029
Comment 4 Ismael Asensio 2023-06-24 12:17:26 UTC
Git commit 715a7392fc498a8c98fbecdd05c16723777e7301 by Ismael Asensio.
Committed on 24/06/2023 at 12:05.
Pushed by iasensio into branch 'master'.

applets/weather: Port away from Plasmoid.nativeInterface

On the new API, `Plasmoid` directly points to the applet object

M  +1    -1    applets/weather/package/contents/ui/CompactRepresentation.qml
M  +1    -1    applets/weather/package/contents/ui/config/ConfigAppearance.qml
M  +1    -1    applets/weather/package/contents/ui/config/ConfigWeatherStation.qml
M  +1    -1    applets/weather/package/contents/ui/main.qml

https://invent.kde.org/plasma/kdeplasma-addons/-/commit/715a7392fc498a8c98fbecdd05c16723777e7301
Comment 5 Ismael Asensio 2023-06-24 12:37:36 UTC
Git commit 8ff5e35511b8d9c0c88ccbd60d4e5ac7454391a8 by Ismael Asensio.
Committed on 24/06/2023 at 12:24.
Pushed by iasensio into branch 'master'.

dataengines/weather: Fix finding ions on Plasma5Support

Plasma5Support expects that dataengine plugins will be in the form
of "plasma_engine_x", so let's rename the ions' library names to
match this expectation

Also "Id" keyword on plugin json descriptions is deprecated, but
we still want to provide the short ion name (ex. "noaa") instead
of the full qualified library name
FIXED-IN: 6

M  +3    -3    dataengines/weather/ions/bbcukmet/CMakeLists.txt
M  +0    -1    dataengines/weather/ions/bbcukmet/ion-bbcukmet.json
M  +3    -3    dataengines/weather/ions/dwd/CMakeLists.txt
M  +0    -1    dataengines/weather/ions/dwd/ion-dwd.json
M  +3    -3    dataengines/weather/ions/envcan/CMakeLists.txt
M  +0    -1    dataengines/weather/ions/envcan/ion-envcan.json
M  +3    -3    dataengines/weather/ions/noaa/CMakeLists.txt
M  +0    -1    dataengines/weather/ions/noaa/ion-noaa.json
M  +3    -3    dataengines/weather/ions/wetter.com/CMakeLists.txt
M  +0    -1    dataengines/weather/ions/wetter.com/ion-wettercom.json
M  +4    -2    dataengines/weather/weatherengine.cpp

https://invent.kde.org/plasma/plasma-workspace/-/commit/8ff5e35511b8d9c0c88ccbd60d4e5ac7454391a8