dataengines/weather: Fix finding ions on Plasma5Support

Plasma5Support expects that dataengine plugins will be in the form
of "plasma_engine_x", so let's rename the ions' library names to
match this expectation

Also "Id" keyword on plugin json descriptions is deprecated, but
we still want to provide the short ion name (ex. "noaa") instead
of the full qualified library name

BUG: 470936
FIXED-IN: 6